This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
6/5/21: Prevented walkup to an angle beyond the maximum allowed tilt (In 3.8).

5/24/21: Fixed autodoc/mdoc functions and IsVariableDefined when run from
Python.

5/24/21: Added plugin and scope functions and scripts commands for accessing
image-beam tilt on an FEI scope.

5/18/21: Fixed disabling of script toolbar when stage is moved after setting up
a Navigator montage (In 3.8).

5/17/21: Add script commands to access emission state on JEOL cold FEG.

5/16/21: Fixed loss of information needed for hole finder when "Rotate on
load" is set for the map (In 3.8).

5/10/21: SEM_3-8-9
5/10/21: Added property to stop reading properties before ones defined in a
later (beta) version (In 3.8)

5/10/21: Fixed STEM detector name displayed and saved in mdoc when detectors
are mapped to Digiscan channels (In 3.8).

5/10/21: Fixed reading of DE camera server property for scaling of counting
mode images (In 3.8).

5/9/21: Fixed ReportIfNavOpen to give 1 when no file defined (In 3.8).

5/5/21: Added ability to embed Python inside regular scripts.

5/5/21: Fixed display of multi-shot areas when multiple holes not selected (In
3.8).

5/5/21: Saved existing script package under a new name when reading settings
with no script pack entry because it was being overwritten (In 3.8).

5/3/21: Made the program stop tasks before exiting so that beam tilt and other
states gets restored, after asking the user to confirm.

4/30/21: Fixed crash displaying hole finder points when montage analysis fails
(In 3.8).

4/29/21: Fix potential crash changing STEM mag on JEOL.

4/29/21: Allowed a regular script function to be called from Python, switched
to collecting standard output from Python and putting it in the log so that