@@ -105,6 +105,7 @@ INT_PROP_TEST("STEMUnsignedOption", mWinApp->mDocWnd->, STEMunsignOpt)
 FLOAT_PROP_TEST("UnsignedTruncationLimit", mWinApp->mBufferManager->, UnsignedTruncLimit)
 INT_PROP_TEST("FileOptionsSaveMdocFile", mWinApp->mDocWnd->, DfltUseMdoc)
 INT_PROP_TEST("MaxStackWindowSizeXY", mWinApp->mBufferManager->, StackWinMaxXY)
+BOOL_PROP_TEST("BufferStatusShowFocus", mWinApp->mStatusWindow., ShowDefocus)
 FLOAT_PROP_TEST("GlobalExtraRotation", shiftManager->, GlobalExtraRotation)
 FLOAT_PROP_TEST("MicronsPerUnitImageShift", shiftManager->, RoughISscale)
 FLOAT_PROP_TEST("LowMagMicronsPerUnitIS", shiftManager->, LMRoughISscale)
