@@ -533,6 +533,11 @@
             SerialEM's message box.</TD>
         </TR>
         <TR VALIGN="top">
+          <TD>BufferStatusShowFocus</TD>
+          <TD>Set to 0 to show magnification instead of defocus in the summary lines of the 
+            Buffer Status panel.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>ExternalTool</TD>
           <TD>Follow with the text of an entry to insert into the Tools menu, which will
            appear when at least one entry has been created.</TD>
