@@ -3,6 +3,10 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+6/8/21: Added script commands ChangeItemDraw, ReportCurrentBuffer, and
+ListCalibrations, and property to show magnification instead of defocus in the
+Buffer Status panel.
+
 6/5/21: Prevented walkup to an angle beyond the maximum allowed tilt (In 3.8).
 
 5/24/21: Fixed autodoc/mdoc functions and IsVariableDefined when run from
